# NeohookeanMuscles

./: CMakeLists.txt  README.md
Mathematica/: Muscles.nb
input/: input2d.json  input3d.json
src/: 2dmuscle.cpp  3dmuscle.cpp
